--- a/aplicacion/templates/index.html
+++ b/aplicacion/templates/index.html
@@ -48,7 +48,7 @@
 
       <div class="profile">
         <img src="static/img/foto.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Joel Ramirez Garay</a></h1>
+        <h1 class="text-light">Joel Ramirez Garay</h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/JoEnrique1992/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
